--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -8,48 +8,52 @@
       short: "%e. %b"
       long: "%e. %B %Y"
       
-    day_names: - søndag
-    day_names: - mandag
-    day_names: - tirsdag
-    day_names: - onsdag
-    day_names: - torsdag
-    day_names: - fredag
-    day_names: - lørdag
-    abbr_day_names: - søn
-    abbr_day_names: - man
-    abbr_day_names: - tir
-    abbr_day_names: - ons
-    abbr_day_names: - tor
-    abbr_day_names: - fre
-    abbr_day_names: - lør
+    day_names:
+      - søndag
+      - mandag
+      - tirsdag
+      - onsdag
+      - torsdag
+      - fredag
+      - lørdag
+    abbr_day_names:
+      - søn
+      - man
+      - tir
+      - ons
+      - tor
+      - fre
+      - lør
       
     # Don't forget the nil at the beginning; there's no such thing as a 0th month
-    month_names: - ~
-    month_names: - januar
-    month_names: - februar
-    month_names: - mars
-    month_names: - april
-    month_names: - mai
-    month_names: - juni
-    month_names: - juli
-    month_names: - august
-    month_names: - september
-    month_names: - oktober
-    month_names: - november
-    month_names: - desember
-    abbr_month_names: - ~
-    abbr_month_names: - jan
-    abbr_month_names: - feb
-    abbr_month_names: - mar
-    abbr_month_names: - apr
-    abbr_month_names: - mai
-    abbr_month_names: - jun
-    abbr_month_names: - jul
-    abbr_month_names: - aug
-    abbr_month_names: - sep
-    abbr_month_names: - okt
-    abbr_month_names: - nov
-    abbr_month_names: - des
+    month_names:
+      - ~
+      - januar
+      - februar
+      - mars
+      - april
+      - mai
+      - juni
+      - juli
+      - august
+      - september
+      - oktober
+      - november
+      - desember
+    abbr_month_names:
+      - ~
+      - jan
+      - feb
+      - mar
+      - apr
+      - mai
+      - jun
+      - jul
+      - aug
+      - sep
+      - okt
+      - nov
+      - des
     # Used in date_select and datime_select.
     order:
       - :day
