--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -8,48 +8,52 @@ vi:
       short: "%d %b"
       long: "%d %B, %Y"
       
-    day_names: - "Chủ nhật"
-    day_names: - "Thứ hai"
-    day_names: - "Thứ ba"
-    day_names: - "Thứ tư"
-    day_names: - "Thứ năm"
-    day_names: - "Thứ sáu"
-    day_names: - "Thứ bảy"
-    abbr_day_names: - "Chủ nhật"
-    abbr_day_names: - "Thứ hai"
-    abbr_day_names: - "Thứ ba"
-    abbr_day_names: - "Thứ tư"
-    abbr_day_names: - "Thứ năm"
-    abbr_day_names: - "Thứ sáu"
-    abbr_day_names: - "Thứ bảy"
+    day_names:
+      - "Chủ nhật"
+      - "Thứ hai"
+      - "Thứ ba"
+      - "Thứ tư"
+      - "Thứ năm"
+      - "Thứ sáu"
+      - "Thứ bảy"
+    abbr_day_names:
+      - "Chủ nhật"
+      - "Thứ hai"
+      - "Thứ ba"
+      - "Thứ tư"
+      - "Thứ năm"
+      - "Thứ sáu"
+      - "Thứ bảy"
       
     # Don't forget the nil at the beginning; there's no such thing as a 0th month
-    month_names: - ~
-    month_names: - "Tháng một"
-    month_names: - "Tháng hai"
-    month_names: - "Tháng ba"
-    month_names: - "Tháng tư"
-    month_names: - "Tháng năm"
-    month_names: - "Tháng sáu"
-    month_names: - "Tháng bảy"
-    month_names: - "Tháng tám"
-    month_names: - "Tháng chín"
-    month_names: - "Tháng mười"
-    month_names: - "Tháng mười một"
-    month_names: - "Tháng mười hai"
-    abbr_month_names: - ~
-    abbr_month_names: - "Tháng một"
-    abbr_month_names: - "Tháng hai"
-    abbr_month_names: - "Tháng ba"
-    abbr_month_names: - "Tháng tư"
-    abbr_month_names: - "Tháng năm"
-    abbr_month_names: - "Tháng sáu"
-    abbr_month_names: - "Tháng bảy"
-    abbr_month_names: - "Tháng tám"
-    abbr_month_names: - "Tháng chín"
-    abbr_month_names: - "Tháng mười"
-    abbr_month_names: - "Tháng mười một"
-    abbr_month_names: - "Tháng mười hai"
+    month_names:
+      - ~
+      - "Tháng một"
+      - "Tháng hai"
+      - "Tháng ba"
+      - "Tháng tư"
+      - "Tháng năm"
+      - "Tháng sáu"
+      - "Tháng bảy"
+      - "Tháng tám"
+      - "Tháng chín"
+      - "Tháng mười"
+      - "Tháng mười một"
+      - "Tháng mười hai"
+    abbr_month_names:
+      - ~
+      - "Tháng một"
+      - "Tháng hai"
+      - "Tháng ba"
+      - "Tháng tư"
+      - "Tháng năm"
+      - "Tháng sáu"
+      - "Tháng bảy"
+      - "Tháng tám"
+      - "Tháng chín"
+      - "Tháng mười"
+      - "Tháng mười một"
+      - "Tháng mười hai"
     # Used in date_select and datime_select.
     order:
       - :day
