--- a/config/locales/lt.yml
+++ b/config/locales/lt.yml
@@ -8,48 +8,52 @@ lt:
       short: "%b %d"
       long: "%B %d, %Y"
       
-    day_names: - sekmadienis
-    day_names: - pirmadienis
-    day_names: - antradienis
-    day_names: - trečiadienis
-    day_names: - ketvirtadienis
-    day_names: - penktadienis
-    day_names: - šeštadienis
-    abbr_day_names: - Sek
-    abbr_day_names: - Pir
-    abbr_day_names: - Ant
-    abbr_day_names: - Tre
-    abbr_day_names: - Ket
-    abbr_day_names: - Pen
-    abbr_day_names: - Šeš
+    day_names:
+      - sekmadienis
+      - pirmadienis
+      - antradienis
+      - trečiadienis
+      - ketvirtadienis
+      - penktadienis
+      - šeštadienis
+    abbr_day_names:
+      - Sek
+      - Pir
+      - Ant
+      - Tre
+      - Ket
+      - Pen
+      - Šeš
       
     # Don't forget the nil at the beginning; there's no such thing as a 0th month
-    month_names: - ~
-    month_names: - sausio
-    month_names: - vasario
-    month_names: - kovo
-    month_names: - balandžio
-    month_names: - gegužės
-    month_names: - birželio
-    month_names: - liepos
-    month_names: - rugpjūčio
-    month_names: - rugsėjo
-    month_names: - spalio
-    month_names: - lapkričio
-    month_names: - gruodžio
-    abbr_month_names: - ~
-    abbr_month_names: - Sau
-    abbr_month_names: - Vas
-    abbr_month_names: - Kov
-    abbr_month_names: - Bal
-    abbr_month_names: - Geg
-    abbr_month_names: - Bir
-    abbr_month_names: - Lie
-    abbr_month_names: - Rgp
-    abbr_month_names: - Rgs
-    abbr_month_names: - Spa
-    abbr_month_names: - Lap
-    abbr_month_names: - Grd
+    month_names:
+      - ~
+      - sausio
+      - vasario
+      - kovo
+      - balandžio
+      - gegužės
+      - birželio
+      - liepos
+      - rugpjūčio
+      - rugsėjo
+      - spalio
+      - lapkričio
+      - gruodžio
+    abbr_month_names:
+      - ~
+      - Sau
+      - Vas
+      - Kov
+      - Bal
+      - Geg
+      - Bir
+      - Lie
+      - Rgp
+      - Rgs
+      - Spa
+      - Lap
+      - Grd
     # Used in date_select and datime_select.
     order:
       - :year
