--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -8,48 +8,52 @@ nl:
       short: "%e %b"
       long: "%d %B, %Y"
       
-    day_names: - zondag
-    day_names: - maandag
-    day_names: - dinsdag
-    day_names: - woensdag
-    day_names: - donderdag
-    day_names: - vrijdag
-    day_names: - zaterdag
-    abbr_day_names: - zo
-    abbr_day_names: - ma
-    abbr_day_names: - di
-    abbr_day_names: - wo
-    abbr_day_names: - do
-    abbr_day_names: - vr
-    abbr_day_names: - za
+    day_names:
+      - zondag
+      - maandag
+      - dinsdag
+      - woensdag
+      - donderdag
+      - vrijdag
+      - zaterdag
+    abbr_day_names:
+      - zo
+      - ma
+      - di
+      - wo
+      - do
+      - vr
+      - za
       
     # Don't forget the nil at the beginning; there's no such thing as a 0th month
-    month_names: - ~
-    month_names: - januari
-    month_names: - februari
-    month_names: - maart
-    month_names: - april
-    month_names: - mei
-    month_names: - juni
-    month_names: - juli
-    month_names: - augustus
-    month_names: - september
-    month_names: - oktober
-    month_names: - november
-    month_names: - december
-    abbr_month_names: - ~
-    abbr_month_names: - jan
-    abbr_month_names: - feb
-    abbr_month_names: - mrt
-    abbr_month_names: - apr
-    abbr_month_names: - mei
-    abbr_month_names: - jun
-    abbr_month_names: - jul
-    abbr_month_names: - aug
-    abbr_month_names: - sep
-    abbr_month_names: - okt
-    abbr_month_names: - nov
-    abbr_month_names: - dec
+    month_names:
+      - ~
+      - januari
+      - februari
+      - maart
+      - april
+      - mei
+      - juni
+      - juli
+      - augustus
+      - september
+      - oktober
+      - november
+      - december
+    abbr_month_names:
+      - ~
+      - jan
+      - feb
+      - mrt
+      - apr
+      - mei
+      - jun
+      - jul
+      - aug
+      - sep
+      - okt
+      - nov
+      - dec
     # Used in date_select and datime_select.
     order:
       - :day
