--- a/config/locales/zh_TW.yml
+++ b/config/locales/zh_TW.yml
@@ -8,48 +8,52 @@ zh_TW:
       short: "%b%d日"
       long: "%Y年%b%d日"
       
-    day_names: - 星期日
-    day_names: - 星期一
-    day_names: - 星期二
-    day_names: - 星期三
-    day_names: - 星期四
-    day_names: - 星期五
-    day_names: - 星期六
-    abbr_day_names: - 日
-    abbr_day_names: - 一
-    abbr_day_names: - 二
-    abbr_day_names: - 三
-    abbr_day_names: - 四
-    abbr_day_names: - 五
-    abbr_day_names: - 六
+    day_names:
+      - 星期日
+      - 星期一
+      - 星期二
+      - 星期三
+      - 星期四
+      - 星期五
+      - 星期六
+    abbr_day_names:
+      - 日
+      - 一
+      - 二
+      - 三
+      - 四
+      - 五
+      - 六
       
     # Don't forget the nil at the beginning; there's no such thing as a 0th month
-    month_names: - ~
-    month_names: - 一月
-    month_names: - 二月
-    month_names: - 三月
-    month_names: - 四月
-    month_names: - 五月
-    month_names: - 六月
-    month_names: - 七月
-    month_names: - 八月
-    month_names: - 九月
-    month_names: - 十月
-    month_names: - 十一月
-    month_names: - 十二月
-    abbr_month_names: - ~
-    abbr_month_names: - 1月
-    abbr_month_names: - 2月
-    abbr_month_names: - 3月
-    abbr_month_names: - 4月
-    abbr_month_names: - 5月
-    abbr_month_names: - 6月
-    abbr_month_names: - 7月
-    abbr_month_names: - 8月
-    abbr_month_names: - 9月
-    abbr_month_names: - 10月
-    abbr_month_names: - 11月
-    abbr_month_names: - 12月
+    month_names:
+      - ~
+      - 一月
+      - 二月
+      - 三月
+      - 四月
+      - 五月
+      - 六月
+      - 七月
+      - 八月
+      - 九月
+      - 十月
+      - 十一月
+      - 十二月
+    abbr_month_names:
+      - ~
+      - 1月
+      - 2月
+      - 3月
+      - 4月
+      - 5月
+      - 6月
+      - 7月
+      - 8月
+      - 9月
+      - 10月
+      - 11月
+      - 12月
     # Used in date_select and datime_select.
     order:
       - :year
